@@ -1,5 +1,7 @@
 2003-05-30  Bradley Bell  <btb@icculus.org>
 
+	* main/playsave.c: improve player loading
+
 	* main/movie.c: improve movie loading
 
 	* main/mission.c: improve mission loading
